--- a/Contact.html
+++ b/Contact.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <header>
+        <div>
+            <H1>IMMUNIZATION</H1>
+        </div>
+<nav>
     <a href="Home.html">Home</a>
     <a href="About.html">About us</a>
+        </nav>
+</header>
     <section>
         <div class="logo">
             <img src="large.png">
@@ -19,11 +26,11 @@
             <P>Incase of any inquiries u can reach out to our team to be better
                 assisted in the matter
             </P>
-            <ul>
+            
                 <li>Email: kayondonicholas223gmail.com</li>
                 <li>Telephone number: 0755047028</li>
                 <li>saerachy123gmail.com </li>
-            </ul>
+            
         </div>
         <div class="info">
             <h1>CONTACT INFORMATION</h1>
