--- a/Home.html
+++ b/Home.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME PAGE</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+      <header>
+        <div>
+            <H1>IMMUNIZATION</H1>
+        </div>
+<nav>
     <a href="About.html">About us</a>
     <a href="Contact.html">Contact us</a>
-    <section>
+    </nav>
+</header>
+    <section>   
         <nav>
             <div class="logo">
                 <img src="large.png">
